fixed local storage saving light/dark mode

--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ button {
   cursor: pointer;
 }
 
-.colored {
+/* .colored {
   background-color: rgb(255, 255, 255);
-}
+} */
 
 /* IMPORTED ICONS */
 .line-md--light-dark {
